--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "angular-route": "~1.6.3",
     "angular-resource": "~1.6.3",
     "bootstrap": "~3.3.7",
-    "angular-devise": "~1.3.0"
+    "angular-devise": "~1.3.0",
+    "angular-cookies": "~1.6.3"
   }
 }
